# SpaceShooterIII

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Cargo.toml  README.md  Space Shooter III.cbp  Space Shooter III.layout  SpaceShooterIII.sln  SpaceShooterIII.vcxproj  SpaceShooterIII.vcxproj.filters  packages.config
cmake/Modules/: FindBox2D.cmake
inc/gameobjects/: gameobject.h
inc/gameobjects/graphics/: sprite.h
inc/gameobjects/physics/: enemy.h  meteor.h  player.h  projectile.h
inc/gameobjects/ui/: button.h
inc/scene/: menu.h  scene.h  space.h
inc/scenes/: main_menu.h  scene.h
res/gfx/: Thumbs.db  planet.glsl  space.glsl
res/gfx/Backgrounds/: Thumbs.db
res/gfx/Damage/: Thumbs.db
res/gfx/Effects/: Thumbs.db
res/gfx/Enemies/: Thumbs.db
res/gfx/Lasers/: Thumbs.db
res/gfx/Meteors/: Thumbs.db
res/gfx/Shaders/: space.glsl
res/imgs/: Thumbs.db
res/imgs/Backgrounds/: Thumbs.db
res/imgs/Damage/: Thumbs.db
res/imgs/Enemies/: Thumbs.db
res/imgs/Lasers/: Thumbs.db
res/imgs/Meteors/: Thumbs.db
res/imgs/Parts/: Thumbs.db
res/imgs/Power-ups/: Thumbs.db
res/imgs/UI/: Thumbs.db
src/: main.cpp  main.rs
src/gameobjects/graphics/: sprite.cpp
src/gameobjects/physics/: enemy.cpp  meteor.cpp  player.cpp  projectile.cpp
src/gameobjects/ui/: button.cpp
src/scene/: menu.cpp  space.cpp
src/scenes/: main_menu.cpp
